Fix empty table flicker

--- a/static/style.css
+++ b/static/style.css
@@ -34,6 +34,10 @@ body, table, h6, th, td {
   padding-right: 0px;
 }
 
+#rec-ingred-col, #recipe-col {
+  min-height: 50px;
+}
+
 @media screen and (min-width: 992px) {
   #my-ingred-col {
     padding-left: 0px;
@@ -387,8 +391,7 @@ table.dataTable tbody td {
 
 .loading-icon {
   position: absolute;
-  top: 0;
-  bottom: 0;
+  top: 50px;
   left: 0;
   right: 0;
   margin: auto;
